*feedreader-2.0.2 (15 Jul 2017)

  15 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +feedreader-2.0.2.ebuild:
  net-news/feedreader:  Add ebuild for version 2.0.2

  05 Sep 2016; Manuel Friedli <manuel@fritteli.ch> feedreader-1.6.2.ebuild:
  net-news/feedreader:  fixed feedreader ebuild for EAPI="6"

  01 Sep 2016; Manuel Friedli <manuel@fritteli.ch> -feedreader-1.2.1-r1.ebuild,
  -feedreader-1.4.3.ebuild, feedreader-1.6.2.ebuild, metadata.xml:
  net-news/feedreader:  updated to EAPI="6" and deleted old ebuilds

*feedreader-1.6.2 (30 Aug 2016)

  30 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +feedreader-1.6.2.ebuild,
  -feedreader-1.6_beta1.ebuild:
  net-news/feedreader:  added ebuild for version 1.6.2 and removed ebuild for
  version 1.6_beta1

  29 Aug 2016; Manuel Friedli <manuel@fritteli.ch> feedreader-1.6_beta1.ebuild:
  updated all manifests

*feedreader-1.6_beta1 (10 Jul 2016)

  10 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +feedreader-1.6_beta1.ebuild:
  net-news/feedreader:  added ebuild for version 1.6_beta1

  07 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +ChangeLog:
  Added ChangeLog