@@ -1,6 +1,6 @@
 DIST v1.6.2.tar.gz 1102370 SHA256 c9ddb59d14a2cb04d00db07fcd90f3de07f9ae1f2fb0f21783db8e9a242991ed SHA512 ca24b96d270c3b880557baced1aa5a08f9ad11845cdab5e30b2c03381b3bfcad2b7e16310d5672efca75a7cbd1e47079f7c18083322cc56412a16a9968ea1033 WHIRLPOOL 9f8821d96433544b8aba19e813785febc18691ef7f821eb5193f4d6a37cfa2e1090e380389debb54ade4af85232b3b4b27c84e8770fb166e0a4bab160ff2f2de
 DIST v2.0.2.tar.gz 725025 SHA256 949262912bc07f8d1ec72dfa1bbeafb0ed1cea992589e1ee5901e0630c714261 SHA512 99d1946d959c64977a35470b3eb67183c0d5643f51d838809c628ffb12964d5bfcb5b82b32f289a0bfcf70e105014f856ebba8b514b3f1ad00b5c2bb551c5dee WHIRLPOOL fb6b91749c0f0d5ba3df620f012d577eeb37278b70b6b825e1eeff0a5634ee48436d4be80391b7ee2310be47a7b1e0decb2fcfeadc86749e927e8a4ac3a0016f
-EBUILD feedreader-1.6.2.ebuild 1496 SHA256 f3fdb4dc65f70c6bfd4f8f5abcd434394fcf5a10527f5a06b26c4598e67f27da SHA512 737550f382cf2c6e5d03a2b84ef2e65900097755462d87abb25cb720fa74b56355e0ec2a97f8dfdde34272bcf4c98bb88ed2a04e1ca3f4a6e129b2195d6af7f4 WHIRLPOOL 148adb09690421fab5451cf9f4422cc0567b1c4538753a2b3757eb8c9e2728d40c7cb394d8ca31710666102dbeb5c54a3a04d8e34da57a6984f8c6f1ec604600
-EBUILD feedreader-2.0.2.ebuild 1458 SHA256 53e10f4a56362b34a9109d6a0d0782cc4614b40e5883a20273f0daf9aae4928d SHA512 904366b92351a0c30a37d3095d137fbd5962c9f2169d5e030f619034146b8a31fb91fdbd041d6167dfc1507d3c0b8714773e97f3bdd2b6df91af0af4b5996713 WHIRLPOOL 7cbd4e46dc055c072c9a782abf2806ffff1e417cd7eed749dc3177fe13583118c7bf56db0e39a64ace6c1f3f711572486d20dbac090f3172f543870dfdd9e83b
-MISC ChangeLog 1123 SHA256 eca409d5158c9bb22738458aa7f06fbf654fb1f82ed44ad41a2973d0811141a9 SHA512 77fd9da4fcffef8b1b5f622d65273ac8047fc4cdfdeb3f9de6eb49e39c6575c881b1deddcbdc39f0575c7cbdfc93947dce82a7faba2df5e1f41ef48367a1a571 WHIRLPOOL 0974844fad3eadd44cefa508d4c665bbdafc2fe501b55c2d40452f19e76553811a06dbf14e482af049aaf136ba4a56f8265e03f60a360ece2618ea62f1778938
+EBUILD feedreader-1.6.2-r1.ebuild 1515 SHA256 f80fd4ee78782b7d3b3fadf1905f3445ef8c0a5d8dcc3923e4e3af02daad65ff SHA512 057d2817dc5b68e353c7d36abc895f50b4f185141b676c5d4bd5846a988677ca9cb36b4f575a6cc9620c39c5a17d4948d1c0b692b14e69252805bbda94f190d7 WHIRLPOOL 15883bedc7a70f1fa41c23a01250eb4923d7dc60b3e43eae3d878c4144dcd9479048e7ce0ba57f97c3bb74e01f44591a083eb87b3cf162c1b92dc6a4b0c1066e
+EBUILD feedreader-2.0.2-r1.ebuild 1477 SHA256 a87455151ab4641513124769de44636614b00f9f89bb1e6ec34fe82c8b4e9dd8 SHA512 bcb0af319891c8dc46b49e1679cee4e71f575e413ff9f702be69d44f6e17fce8fe1dc2cd938851044c78232fb4f8c6ec619a39e321a230e89d46101cbb80025f WHIRLPOOL 960ac5bbfe56a178ea4dfc99e25f00dc4bbf7d8db3d774c53769a1842fadb497b01417dfe150cbb3179cd76c0711dcb9c8ef80109caf7c53419618bc41f1f328
+MISC ChangeLog 1432 SHA256 2133bb3607294899161dfcd4cc5d606a395061d38ec36c9f77d700e0c0edaf4c SHA512 587da520c91bfed318751d098571cca2cd6c664d2113c716f3cfd595482130293e10e75ad883c3bd8b6c0824fc43fd64862ce6b2273dcf3b4cdacd75a0486f63 WHIRLPOOL d3bc3dd1cd8210edce87798b4b26a4f7395bc4d398e2cb5d99dbf4da234b1bdd6323c85a6dda22a74e1094bc08a58a4c489b0360af1215b66dc963651a8d43d0
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
