@@ -21,23 +21,26 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64"
 
-RDEPEND="$(vala_depend)
-	app-crypt/libsecret[vala]
-	dev-db/sqlite:3
-	dev-libs/gobject-introspection
+IUSE="+gnome"
+
+# from old ebuild 1.4.3
+#	app-text/html2text
+#	gnome? ( gnome-base/gnome-keyring )
+
+RDEPEND=">=x11-libs/gtk+-3.20:3
+	$(vala_depend)
 	dev-libs/json-glib
 	dev-libs/libgee:0.8
-	dev-libs/libpeas
-	dev-libs/libxml2
-	media-libs/gstreamer:1.0
-	media-libs/gst-plugins-base:1.0
-	net-libs/gnome-online-accounts
 	net-libs/libsoup:2.4
-	net-libs/rest
+	dev-libs/gobject-introspection
+	dev-db/sqlite:3
+	app-crypt/libsecret[vala]
+	x11-libs/libnotify
+	dev-libs/libxml2
+	net-libs/rest:0.7
 	net-libs/webkit-gtk:4
-	net-misc/curl
-	>=x11-libs/gtk+-3.22:3
-	x11-libs/libnotify"
+	media-libs/gstreamer:1.0
+	media-libs/gst-plugins-base:1.0"
 
 DEPEND="${RDEPEND}
 	dev-util/intltool
@@ -51,6 +54,7 @@ src_prepare() {
 }
 
 src_configure() {
+	local PREFIX=/usr
 	local mycmakeargs=(
 		-DWITH_LIBUNITY=OFF
 		-DVALA_EXECUTABLE="${VALAC}"
